--- a/frontend/src/translations/ru/common.json
+++ b/frontend/src/translations/ru/common.json
@@ -14,6 +14,15 @@
       "humidity": "Влажность"
     }
   },
+  "graph": {
+    "last10Minutes": "10 минут",
+    "lastHour": "Час",
+    "lastDay": "День",
+    "lastWeek": "Неделя",
+    "lastMonth": "Месяц",
+    "lastYear": "Год",
+    "nothing_is_here": "Ничего нет :("
+  },
   "logs": {
     "logs": "Логи"
   },
