--- a/frontend/src/translations/en/common.json
+++ b/frontend/src/translations/en/common.json
@@ -14,6 +14,15 @@
       "humidity": "Humidity"
     }
   },
+  "graph": {
+    "last10Minutes": "10 minutes",
+    "lastHour": "Hour",
+    "lastDay": "Day",
+    "lastWeek": "Week",
+    "lastMonth": "Month",
+    "lastYear": "Year",
+    "nothing_is_here": "Nothing's here :("
+  },
   "logs": {
     "logs": "Logs"
   },
