--- a/frontend/src/translations/ua/common.json
+++ b/frontend/src/translations/ua/common.json
@@ -14,6 +14,15 @@
       "humidity": "Вологість"
     }
   },
+  "graph": {
+    "last10Minutes": "10 хвилин",
+    "lastHour": "Година",
+    "lastDay": "День",
+    "lastWeek": "Тиждень",
+    "lastMonth": "Місяць",
+    "lastYear": "Рік",
+    "nothing_is_here": "Нічого немає :("
+  },
   "logs": {
     "logs": "Логи"
   },
